# hegselmann2005

./: README.ja.md  README.md  pyproject.toml
docs/: architecture.ja.md  architecture.md  cli.ja.md  cli.md  usecases.ja.md  usecases.md  visualization.ja.md  visualization.md
simulation/: Cargo.toml
simulation/src/: config.rs  lib.rs  main.rs  means.rs  mechanisms.rs  metrics.rs  simulation.rs  world.rs
simulation/tests/: integration_test.rs
tools/: pyproject.toml
tools/src/hegselmann_tools/: cli.py  reproduce_paper.py  show_experiment_settings.py  visualize.py  visualize_sweep.py
