[package]
name = "hegselmann-opinion-simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "hegselmann_opinion_simulation"
path = "src/lib.rs"

[[bin]]
name = "hegselmann"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
clap        = { version = "4.5", features = ["derive"] }
chrono      = "0.4"
serde_json  = "1.0"

# social-simulation framework (socsim) — ABM のエンジン基盤．
# 完全グラフ・非空間モデルのため core + engine のみ．commit は Cargo.lock で固定．
# Phase 3 ネットワーク版で socsim-net を追加する余地がある．
socsim-core   = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-core" }
socsim-engine = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-engine" }
