[project]
name = "hegselmann-tools"
version = "0.1.0"
description = "Hegselmann & Krause (2005) opinion dynamics — visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "socsim-tools",
]

[project.scripts]
hegselmann-tools = "hegselmann_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hegselmann_tools"]
